<resources>
    <string name="app_name">Weather Demo</string>
    <string name="add">Add</string>

    <string name="celsius_symbol">\u00b0</string>

    <string name="humidity_symbol">%</string>

    <string name="no_internet">Internet unavailable!!!</string>

    <string name="unit_name">Unit</string>
    <string name="distance_speed_name">Distance/Speed</string>
    <string name="temp_unit_c">\u00b0C</string>

    <string name="temp_unit_f">\u00b0F</string>
    <string name="speed_unit_km">Km</string>
    <string name="speed_unit_mi">Mi</string>
    <string name="pressure_unit_mb">Mb</string>
    <string name="pressure_unit_in">In</string>
    <string name="speed_unit_kmph">kmph</string>
    <string name="speed_unit_mph">mph</string>
    <string name="pressure_unit_inn">in</string>
    <string name="pressure_unit_mbb">mb</string>
    <string name="humidity_text">Humidity</string>
    <string name="pressure_text">Pressure</string>
    <string name="wind_text">Wind</string>

    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="reset_city_list">Reset City List</string>
</resources>
