<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.driftycode.cityweatherapp.MainActivity">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/help"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>
